--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
@@ -15,7 +15,9 @@
     "react-router-dom": "^6.14.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.4"
+    "redux-thunk": "^2.4.2",
+    "web-vitals": "^2.1.4",
+    "redux-mock-store": "^1.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,10 +56,18 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^27.5.1",
     "react-scripts": "^5.0.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.21.0"
+  },
+  
+  "jest": {
+  "transform": {
+    "^.+\\.js$": "babel-jest"
   }
+}
+
 }
