--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jest": "^27.5.1",
     "react-scripts": "^5.0.1",
     "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.2",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
